# TB_2025_CPP_Analysis

./: .gitignore  CMakeLists.txt
Rootifier_Auto/: basic_qa_plots.py  lib_plotting.py  qa_plots.py  qa_plotsX.py  rootifer_auto.py
config/: 0416_example_adcmax_toa.json  106_scan_0.json  106_scan_1.json  106_scan_10.json  106_scan_11.json  106_scan_12.json  106_scan_13.json  106_scan_14.json  106_scan_15.json  106_scan_16.json  106_scan_2.json  106_scan_3.json  106_scan_4.json  106_scan_5.json  106_scan_6.json  106_scan_7.json  106_scan_8.json  106_scan_9.json  305_scan_2.json  305_scan_3.json  305_scan_4.json  312_scan_0.json  312_scan_1.json  312_scan_2.json  312_scan_3.json  312_scan_4.json  312_scan_5.json  317_scan_1.json  mapping_Oct2025.json  params.yaml  run_color_collection.json
include/: CommonParams.hxx  H2GCROC_ADC_Analysis.hxx  H2GCROC_Common.hxx  H2GCROC_TimewalkLUT.hxx  H2GCROC_ToA_Align.hxx  H2GCROC_Toolbox.hxx
script/: 100_RootConverter.cxx  101_EventRecon.cxx  102_EventMatch.cxx  103_HitMap.cxx  104_ADC_Analysis.cxx  105_ToA_ToT_Starting.cxx  106_ADC_Compare.cxx  201_Waveform.cxx  202_EventToA.cxx  300_RootConverterX.cxx  301_EventReconX.cxx  302_EventMatchX.cxx  303_Pedestal.cxx  304_RawADC.cxx  305_ADC_Fit_Compare.cxx  306_ToA_Correction.cxx  307_ToA_Timewalk.cxx  308_ToA_Analysis.cxx  309_ToA_DNL.cxx  310_ToA_Offset.cxx  311_RawToT.cxx  312_ToT_Fit_Compare.cxx  313_ToA_Timewalk_LUT.cxx  314_ToA_Analysis_LUT.cxx  315_ToA_Residual.cxx  316_ADC_ToT.cxx  317_ADC_ToT_Fit_Compare.cxx
workflow/: gen_params_header.py  multi_file_workflow.smk  params.smk  snakefile
